kube/projet/po.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest  # Utilisation de l'image PostgreSQL
          ports:
            - containerPort: 5432  # Port PostgreSQL
          volumeMounts:
            - mountPath: /var/lib/postgresql/data  # Chemin de montage du stockage
              name: postgres-storage  # Nom du volume à monter
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim  # Nom du PersistentVolumeClaim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: app
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432  # Port de la base de données
      targetPort: 5432
